--- a/app/src/main/res/layout/activity_pengirim_transfer.xml
+++ b/app/src/main/res/layout/activity_pengirim_transfer.xml
@@ -41,7 +41,7 @@
       android:layout_height="wrap_content"
       android:layout_marginHorizontal="24dp"
       android:orientation="vertical"
-      android:visibility="gone"
+      android:visibility="invisible"
       android:layout_marginVertical="10dp"
       app:layout_constraintTop_toBottomOf="@+id/tvTitlePembayaran"
       app:layout_constraintStart_toStartOf="parent"
