--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -20,11 +20,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <ImageView
             android:id="@+id/ivAvatar"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/ic_launcher_background"
+            android:src="@drawable/logohistory"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/string_nama_user"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:fontFamily="@font/poppins_bold"
             android:layout_marginVertical="9dp"
             android:layout_marginStart="10dp"
@@ -68,29 +68,31 @@
             android:layout_height="wrap_content"
             android:text="@string/string_id"
             android:textSize="12sp"
+            android:visibility="invisible"
             android:fontFamily="@font/dm_sans_medium"
             app:layout_constraintStart_toStartOf="@id/tvName"
             app:layout_constraintTop_toBottomOf="@id/tvNoRekening" />
 
         <TextView
-            android:id="@+id/tvTotal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/string_10100110"
-            android:textSize="16sp"
-            android:fontFamily="@font/dm_sans_medium"
-            app:layout_constraintEnd_toEndOf="@+id/csUserHistoy"
-            app:layout_constraintTop_toBottomOf="@id/tvCodeBank" />
-
-        <TextView
             android:id="@+id/tvTipeTransaksi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/dm_sans_medium"
+            android:text="@string/string_idr"
+            android:textSize="16sp"
+            android:layout_marginEnd="5dp"
+            app:layout_constraintEnd_toStartOf="@+id/tvTotal"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <TextView
+            android:id="@+id/tvTotal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/dm_sans_medium"
             android:text="@string/string_10100110"
             android:textSize="16sp"
-            android:fontFamily="@font/dm_sans_medium"
-            app:layout_constraintEnd_toEndOf="@+id/csUserHistoy"
-            app:layout_constraintTop_toBottomOf="@id/tvTotal" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/csUserHistoy" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
